--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1174,3 +1174,6 @@ new.dir.project.error.buck=Project directory name must not contain the ''$'' cha
 go.to.file.toolwindow.title=Files matching pattern
 go.to.class.toolwindow.title=Classes matching pattern
 go.to.class.dumb.mode.message=Go To Class action is not available until indices are built, using Go To File instead
+
+warning.load.project.from.share=You are opening a project from a network share. Do you trust this location?\n{0}
+title.load.project.from.share=Loading Project From Network
