--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1192,4 +1192,6 @@ go.to.file.toolwindow.title=Files matching pattern
 go.to.class.toolwindow.title=Classes matching pattern
 go.to.class.dumb.mode.message=Go To Class action is not available until indices are built, using Go To File instead
 
-edit.custom.settings.confirm=A file ''{0}'' does not exist. Create?
+edit.custom.settings.confirm=A file \n''{0}''\n does not exist. Create?
+warning.load.project.from.share=You are opening a project from a network share. Do you trust this location?\n{0}
+title.load.project.from.share=Loading Project From Network
