--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1197,3 +1197,5 @@ go.to.class.dumb.mode.message=Go To Class action is not available until indices 
 edit.custom.settings.confirm=File \n''{0}''\n does not exist. Create?
 warning.load.project.from.share=You are opening a project from a network share. Do you trust this location?\n{0}
 title.load.project.from.share=Loading Project From Network
+warning.load.file.from.share=You are opening a file from a network share. Do you want to continue?\n{0}
+title.load.file.from.share=Loading File From Network
