--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1177,5 +1177,9 @@ go.to.class.dumb.mode.message=Go To Class action is not available until indices 
 
 warning.load.project.from.share=You are opening a project from a network share. Do you trust this location?\n{0}
 title.load.project.from.share=Loading Project From Network
+title.load.local.project=Loading Project
+warning.load.local.project=You are about to open a project. Do you trust this location?\n{0}
 warning.load.file.from.share=You are opening a file from a network share. Do you want to continue?\n{0}
 title.load.file.from.share=Loading File From Network
+warning.load.local.file=You are about to open file. Do you want to continue?\n{0}
+title.load.local.file=Loading File
