--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1203,3 +1203,6 @@ warning.load.file.from.share=You are opening a file from a network share. Do you
 title.load.file.from.share=Loading File From Network
 warning.load.local.file=You are about to open file. Do you want to continue?\n{0}
 title.load.local.file=Loading File
+
+warning.use.rest.api=''{0}'' API is requested. Do you trust ''{1}''?
+title.use.rest.api=Using REST API
