rest api: limit number of requests per minite and check is host trusted (cherry picked from commit bade655)

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -586,3 +586,34 @@ tfs.set.connection.timeout=false
 
 editor.breadcrumbs.highlight.on.hover=false
 editor.breadcrumbs.highlight.on.hover.description=Highlight corresponding ranges in editor on breadcrumb item hover (requires project reopening)
+testDiscovery.enabled=false
+ruby.remote.debugger.supports.catchpoint.removal=true
+
+use.read.action.to.init.service=false
+use.loaded.state.as.existing=false
+
+ide.mac.new.color.picker=false
+
+trace.clipboard.events=false
+trace.clipboard.events.description=Enable detection and logging of OS notifications about external clipboard changes
+trace.clipboard.events.restartRequired=true
+
+trace.focus.on.app.activation=false
+trace.focus.on.app.activation.description=Focus tracing on application activation and deactivation
+trace.focus.on.app.restartRequired=false
+
+rbenv.gemsets.enabled=true
+
+editor.hide.gutter.icons=false
+editor.hide.gutter.icons.description=Hide gutter icons
+ide.new.about=true
+ide.manage.recent.project.action.available=true
+
+python.docker.store.helpers.in.shared.folder=true
+python.docker.store.helpers.in.shared.folder.description=Use Docker volumes bind to local machine folders for uploading helpers to Docker containers, obtaining skeletons and remote sources from them (ignored on Linux)
+idea.save.test.history=true
+focus.follows.mouse.workarounds=false
+focus.follows.mouse.workarounds.description=Enables some workarounds for Focus-follows-mouse issues, like IDEA-112015
+
+ide.rest.api.paranoid.mode=true
+ide.rest.api.requests.per.minute=30
