--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -696,3 +696,6 @@ python.docker.store.helpers.in.shared.folder.description=Use Docker volumes bind
 idea.save.test.history=true
 focus.follows.mouse.workarounds=false
 focus.follows.mouse.workarounds.description=Enables some workarounds for Focus-follows-mouse issues, like IDEA-112015
+
+ide.rest.api.paranoid.mode=true
+ide.rest.api.requests.per.minute=30
