PHP rainbow identifiers WI-21884 Semantic highlighting - each $var in scope can has own distinct color (cherry picked from commit 5b3bba5)

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -727,3 +727,6 @@ cidr.xcode.derived.data.override.description=Ignore Xcode DerivedData location s
 
 ide.rest.api.paranoid.mode=true
 ide.rest.api.requests.per.minute=30
+
+editor.rainbow.identifiers=false
+editor.rainbow.identifiers.description=Rainbow identifiers in editor
