--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1201,6 +1201,9 @@ title.load.local.project=Loading Project
 warning.load.local.project=You are about to open a project. Do you trust this location?\n{0}
 warning.load.file.from.share=You are opening a file from a network share. Do you want to continue?\n{0}
 title.load.file.from.share=Loading File From Network
+
+activation.auth.title=Unauthorized Operation
+activation.auth.message=The command line launcher is outdated. Please refresh it (via Tools | Create Command-line Launcher).
 warning.load.local.file=You are about to open file. Do you want to continue?\n{0}
 title.load.local.file=Loading File
 
