--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -731,4 +731,4 @@ ide.rest.api.requests.per.minute=30
 editor.rainbow.identifiers=false
 editor.rainbow.identifiers.description=Rainbow identifiers in editor
 
-ide.built.in.web.server.activatable=true
+ide.built.in.web.server.activatable=false
