--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1175,6 +1175,9 @@ go.to.file.toolwindow.title=Files matching pattern
 go.to.class.toolwindow.title=Classes matching pattern
 go.to.class.dumb.mode.message=Go To Class action is not available until indices are built, using Go To File instead
 
+activation.auth.title=Unauthorized Operation
+activation.auth.message=The command line launcher is outdated. Please refresh it (via Tools | Create Command-line Launcher).
+
 warning.load.project.from.share=You are opening a project from a network share. Do you trust this location?\n{0}
 title.load.project.from.share=Loading Project From Network
 title.load.local.project=Loading Project
