--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -617,3 +617,4 @@ focus.follows.mouse.workarounds.description=Enables some workarounds for Focus-f
 
 ide.rest.api.paranoid.mode=true
 ide.rest.api.requests.per.minute=30
+ide.built.in.web.server.activatable=true
