--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -620,6 +620,10 @@ linux.jdk.accessibility.atkwrapper.block=true
 javac.unchecked.subtyping.during.incorporation=true
 javac.unchecked.subtyping.during.incorporation.description=Javac performs unchecked subtyping during incorporation, accepting code which is rejected by the spec and by the eclipse compiler
 
+javac.fresh.variables.for.captured.wildcards.only=true
+javac.fresh.variables.for.captured.wildcards.only.description=JLS 18.5.2: if R \u03B8 is a parameterized type, G<A1, ..., An>, and one of A1, ..., An is a wildcard, then, for fresh inference variables \u03B21, ..., \u03B2n ... \
+  Javac creates fresh variables only for i: Ai is a wildcard
+
 check.power.supply.for.mbp=false
 check.power.supply.for.mbp.description=Check for discrete video card and power supply on MBPs
 
