--- a/platform/platform-resources-en/src/messages/XmlBundle.properties
+++ b/platform/platform-resources-en/src/messages/XmlBundle.properties
@@ -250,3 +250,4 @@ javascript.debugger.settings.choose.file.subtitle=Select file to debug JavaScrip
 setting.builtin.server.category.label=Built-in server
 setting.value.builtin.server.port.label=&Port\:
 setting.value.can.accept.external.connections=Can accept &external connections
+setting.value.builtin.server.allow.unsigned.requests=&Allow unsigned requests
